完成了在eject的webpack.config配置less，并且使得less可以模块化

--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,4 @@
+@mianColor: #0f0;
 .App {
   text-align: center;
 }
@@ -15,7 +16,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: @mianColor;
 }
 
 .App-link {
