--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,85 @@
-@mianColor: #0f0;
-.App {
-  text-align: center;
+@themeColor: #c62f2f;
+// 默认样式格式化
+html,body,h1,h2,h3,h4,h5,h6,div,dl,dt,dd,ul,ol,li,p,blockquote,pre,hr,figure,table,caption,th,td,form,fieldset,legend,input,button,textarea,menu{margin:0;padding:0;}
+header,footer,section,article,aside,nav,hgroup,address,figure,figcaption,menu,details{display:block;}
+table{border-collapse:collapse;border-spacing:0;}
+caption,th{text-align:left;font-weight:normal;}
+html,body,fieldset,img,iframe,abbr{border:0;}
+i,cite,em,var,address,dfn{font-style:normal;}
+[hidefocus],summary{outline:0;}
+li{list-style:none;}
+h1,h2,h3,h4,h5,h6,small{font-size:100%;}
+sup,sub{font-size:83%;}
+pre,code,kbd,samp{font-family:inherit;}
+q:before,q:after{content:none;}
+textarea{overflow:auto;resize:none;}
+label,summary{cursor:default;}
+a,button{cursor:pointer;}
+h1,h2,h3,h4,h5,h6,em,strong,b{font-weight:bold;}
+del,ins,u,s,a,a:hover{text-decoration:none;}
+body,textarea,input,button,select,keygen,legend{color:#333;outline:0;}
+body{background:#fff;}
+a,a:hover{color:#333; text-decoration: none;}
+a:link{text-decoration:none; }
+a:visited{text-decoration:none;}
+a:active{text-decoration:none; }
+a:hover{text-decoration:none;}
+html,body{
+  height: 100%;
+  width: 100%;
 }
-:global .anticon svg {
-  font-size: 40px;
+
+.clearfix:after{
+  content: "020"; 
+  display: block; 
+  height: 0; 
+  clear: both; 
+  visibility: hidden;  
+  }
+
+.clearfix {
+  /* 触发 hasLayout */ 
+  zoom: 1; 
+  }
+
+
+
+:global #root{
+  height: 100%;
+  width: 100%;
+
+
+  .app {
+    // text-align: center;
+    height: 100%;
+    width: 100%;
+  }
 }
+:global .ant-layout{
+  width: 100%;
+  height: 100%;
+}
+
+:global .ant-layout-header{
+  height: 50px;
+  width: 100%;
+  background-color: @themeColor;
+}
+
+:global .ant-layout-sider-children{
+  width: 200px;
+  background-color: #108ee9;
+}
+
+:global .ant-layout-footer{
+  height: 50px;
+  background-color: #7dbcea;
+}
+
+
+.test{
+  height: 100px;
+}
+// :global .anticon svg {
+//   font-size: 40px;
+// }
